make constant classes Java 8 friendly